<?xml version="1.0" encoding="utf-8"?>

<!--
RS-Herrieden
Copyright (C) 2018  Noah Seefried and Moritz Fromm

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU Affero General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU Affero General Public License for more details.

You should have received a copy of the GNU Affero General Public License
along with this program. If not, see <http://www.gnu.org/licenses/>.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Allgemein">

        <ListPreference
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:defaultValue="alle"
            android:dialogTitle="@string/title_schoolclass"
            android:entries="@array/pref_schoolclass_entries"
            android:entryValues="@array/pref_schoolclass_values"
            android:key="@string/key_schoolclass_name"
            android:summary="%s"
            android:title="@string/title_schoolclass" />

        <ListPreference
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:defaultValue="0"
            android:dialogTitle="@string/title_update_level"
            android:entries="@array/pref_update_interval_entries"
            android:entryValues="@array/pref_update_interval_values"
            android:key="@string/key_update_interval"
            android:summary="%s"
            android:title="@string/title_update_level" />

        <CheckBoxPreference
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:defaultValue="false"
            android:key="@string/key_upload_over_wifi"
            android:summary="@string/summary_update_only_over_wifi"
            android:title="@string/title_auto_upload" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/summary_code"
            android:title="@string/title_code">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_code" />
        </Preference>

        <Preference android:title="@string/privacy_policy">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_privacy" />
        </Preference>

        <Preference android:title="@string/title_terms">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_terms" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>